# asala

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: release.yml  test-and-build.yml
cli/: .npmignore  README.md  package.json
cli/src/: cli.ts
cli/src/commands/: keys.ts  manifest.ts  sign.ts  verify.ts
core/: .gitignore  .npmignore  README.md  jest.config.js  package.json
core/src/: index.ts
core/src/__tests__/: crypto.test.ts  index.test.ts  physics.test.ts
core/src/crypto/: ela.ts  manifest.ts  utils.ts
core/src/imaging/: decode.ts  processing.ts  stats.ts
core/src/types/: index.ts
core/src/verifiers/: audio.ts  physics.ts  provenance.ts  video.ts
docs/: README.md  api.rst  architecture.rst  cli.rst  conf.py  contributing.rst  index.rst  python.rst  quickstart.rst  requirements.txt
examples/: 01-simple-verification.js  02-sign-content.js  03-physics-verify.ts  README.md  python-physics-verify.py
extension/: .npmignore  README.md  manifest-firefox.json  manifest.json  package.json  tsconfig.json  webpack.config.js
extension/src/: background.ts  content.ts  overlay.css  popup.css  popup.html  popup.ts
python/asala/: __init__.py  _version.py  audio.py  cli.py  crypto.py  manifest.py  physics.py  types.py  verify.py  video.py
python/tests/: conftest.py  test_audio.py  test_audio_benchmark.py  test_cli.py  test_crypto.py  test_manifest.py  test_physics.py  test_physics_benchmark.py  test_types.py  test_verify.py  test_video.py  test_video_benchmark.py
scripts/: build-binaries.bat  build-binaries.sh  create-icons.py  generate-test-data.py
test-data/: README.md
test-data/artifact-eval/: diagnostic.py  run_eval.py
test-data/signed/: sample-landscape.jpg.manifest.json
web/: package.json
web/app/: layout.tsx  page.tsx
